# supersonic-fish

./: .env  .env.development  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.mts
electron/: index.ts
electron/core/: WinMain.ts
mock/: base.ts
script/core/: WinMain.ts
server/: .gitignore  main.py  pyproject.toml  uvicorn_loggin_config.json
server/app/api/v1/: __init__.py
server/app/api/v1/apis/: apis.py
server/app/api/v1/auditlog/: auditlog.py
server/app/api/v1/base/: base.py
server/app/api/v1/users/: users.py
server/app/controllers/: __init__.py  api.py  user.py
server/app/core/: crud.py  ctx.py  dependency.py  exceptions.py  init_app.py  middlewares.py
server/app/models/: admin.py  enums.py
server/app/schemas/: users.py
server/app/settings/: config.py
server/app/utils/: jwt.py
src/: App.vue  main.ts
src/api/login/: index.ts
src/components/Notify/: data.ts
src/components/ThemeSwitch/: index.vue
src/config/: route.ts
src/hooks/: useAnimations.ts
src/layouts/components/Footer/: index.vue
src/layouts/components/NavigationBar/: index.vue
src/router/: index.ts
src/store/modules/: permission.ts
src/utils/: service.ts
src/views/animations/: index.vue
src/views/animations/components/: ScatteredDots.vue  SierpinskiLoop.vue
src/views/dashboard/: index.vue
src/views/dashboard/components/: Welcome.vue
src/views/login/: index.vue
types/: env.d.ts
